Feature/mdlpDownloadState